--- a/ThinkCheer/Application/Admin/View/Admin/add.html
+++ b/ThinkCheer/Application/Admin/View/Admin/add.html
@@ -22,98 +22,90 @@
 <body>
 	<div class="container" style="border:solid 1px #E0E0E0;margin-top:1%;">
 		<h2 style="padding:1% 0;border-bottom:solid 1px #E0E0E0;">添加管理员</h2>
-		<form action="" method="">
-		<div class="col-md-12" style="padding-top:1%">
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">用户名：</label>
-		        <div class="col-sm-8">
-		            <input type="text" name="" class="form-control" placeholder="请输入用户名"> <span class="help-block m-b-none"></span>
+		<form action="{:U('Admin/Admin/doAdd')}" method="post" id="myform" name="myform" enctype="multipart/form-data" onsubmit="return mySubmit(true)">
+			<div class="col-md-12" style="padding-top:1%">
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">用户名：</label>
+			        <div class="col-sm-8">
+			            <input type="text" name="name" class="form-control" placeholder="请输入用户名" id="name"> <span class="help-block m-b-none"></span>
 
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">真实姓名：</label>
-		        <div class="col-sm-8">
-		            <input type="text" name="" class="form-control" placeholder="请输入您的真实姓名"> <span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">真实姓名：</label>
+			        <div class="col-sm-8">
+			            <input type="text" name="realname" class="form-control" placeholder="请输入您的真实姓名"> <span class="help-block m-b-none"></span>
 
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">密码：</label>
-		        <div class="col-sm-8">
-		            <input type="password" class="form-control" name="password" placeholder="请输入密码">
-		            <span class="help-block m-b-none"></span>
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">确认密码：</label>
-		        <div class="col-sm-8">
-		            <input type="password" class="form-control" name="password" placeholder="请输入密码">
-		            <span class="help-block m-b-none"></span>
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">性别：</label>
-		        <div class="col-sm-8">
-		            <label class="radio-inline">
-		                <input type="radio" checked="" value="option1" id="optionsRadios1" name="optionsRadios">男</label>
-		            <label class="radio-inline">
-		                <input type="radio" value="option2" id="optionsRadios2" name="optionsRadios">女</label>
-		            <span class="help-block m-b-none"></span>
-		        </div>
-		    </div>
-		</div>
-		<div class="col-md-12" style="padding-bottom:2em">
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">职位：</label>
-		        <div class="col-sm-8">
-		            <select class="form-control" name="">
-		            	<option>管理层</option>
-		            	<option>设计人员</option>
-		            	<option>开发人员</option>
-		            	<option>测试人员</option>
-		            	<option>系统维护</option>
-		            	<option>UI设计</option>
-		            </select>
-		            <span class="help-block m-b-none"></span>
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">上传头像：</label>
-		        <div class="col-sm-8">
-		            <input type="file" name="" class="form-control"><span class="help-block m-b-none"></span>
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">手机号：</label>
-		        <div class="col-sm-8">
-		            <input type="text" name="" class="form-control" placeholder="15********"> <span class="help-block m-b-none"></span>
-
-		        </div>
-		    </div>
-		    <div class="form-group">
-		        <label class="col-sm-3 control-label">邮箱：</label>
-		        <div class="col-sm-8">
-		            <input type="text" name="" class="form-control" placeholder="111111111@qq.com"> <span class="help-block m-b-none"></span>
-
-		        </div>
-		    </div>
-		    <div class="form-group">
-                <label class="col-sm-3 control-label">出生日期：</label>
-                <div class="col-sm-8">
-                    <input class="form-control layer-date" placeholder="YYYY-MM-DD" onclick="laydate({istime: true, format: 'YYYY-MM-DD'})">
-                    <label class="laydate-icon"></label>
-                </div>
-            </div>
-		</div>
-		</form>
-		<div class="row" style="padding:1% 0">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4">
-				<button type="button" class="btn  btn-primary btn-lg" style="width:100%;">保存</button> 
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">密码：</label>
+			        <div class="col-sm-8">
+			            <input type="password" class="form-control" name="password" placeholder="请输入密码" id="pwd">
+			            <span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">确认密码：</label>
+			        <div class="col-sm-8">
+			            <input type="password" class="form-control" name="repassword" placeholder="请输入密码" id="repwd">
+			            <span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">性别：</label>
+			        <div class="col-sm-8">
+			            <label class="radio-inline">
+			                <input type="radio" checked="" value="男" id="optionsRadios1" name="sex">男</label>
+			            <label class="radio-inline">
+			                <input type="radio" value="女" id="optionsRadios2" name="sex">女</label>
+			            <span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
 			</div>
-			<div class="col-sm-4"></div>
-		</div>
+			<div class="col-md-12" style="padding-bottom:2em">
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">职位：</label>
+			        <div class="col-sm-8">
+			            <input type="text" name="position" class="form-control" placeholder="请输入您的职位"> <span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">上传头像：</label>
+			        <div class="col-sm-8">
+			            <input type="file" name="headimg" class="form-control"><span class="help-block m-b-none"></span>
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">手机号：</label>
+			        <div class="col-sm-8">
+			            <input type="text" name="phone" class="form-control" placeholder="15********"> <span class="help-block m-b-none"></span>
+
+			        </div>
+			    </div>
+			    <div class="form-group">
+			        <label class="col-sm-3 control-label">邮箱：</label>
+			        <div class="col-sm-8">
+			            <input type="text" name="email" class="form-control" placeholder="111111111@qq.com"> <span class="help-block m-b-none"></span>
+
+			        </div>
+			    </div>
+			    <div class="form-group">
+	                <label class="col-sm-3 control-label">出生日期：</label>
+	                <div class="col-sm-8">
+	                    <input class="form-control layer-date" placeholder="YYYY-MM-DD" onclick="laydate({istime: true, format: 'YYYY-MM-DD'})" name="birth">
+	                    <label class="laydate-icon"></label>
+	                </div>
+	            </div>
+			</div>
+			<div class="row" style="padding:1% 0">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<input type="submit" id="basicError" class="btn  btn-primary btn-lg" style="width:100%;" value="保存">
+				</div>
+				<div class="col-sm-4"></div>
+			</div>
+		</form>
 	</div>
 
 	<!-- 全局js -->
