--- a/ThinkCheer/Application/Admin/View/Admin/lists.html
+++ b/ThinkCheer/Application/Admin/View/Admin/lists.html
@@ -39,8 +39,8 @@
                                     <abbr title="Phone">Tel:</abbr> {$d.phone}
                                 </address>
                                 <div class="row" style="float:right; width: 156px;; width: 156px;">
-                                    <button type="button" class="btn  btn-success"><i class="fa fa-pencil" aria-hidden="true"></i> 编辑</button> 
-                                    <button type="button" class="btn  btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> 删除</button> 
+                                    <a href="__MODULE__/Admin/edit?id={$d.auid}" type="button" class="btn  btn-success"><i class="fa fa-pencil" aria-hidden="true"></i> 编辑</a> 
+                                    <a href="__MODULE__/Admin/delete?id={$d.auid}" type="button" class="btn  btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> 删除</a> 
                                 </div>
                             </div>
                             <div class="clearfix"></div>
