--- a/ThinkCheer/Application/Admin/View/Index/index.html
+++ b/ThinkCheer/Application/Admin/View/Index/index.html
@@ -47,13 +47,13 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Admin/lists.html">管理员列表</a>
+                                <a class="J_menuItem" href="__MODULE__/Admin/lists">管理员列表</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="__MODULE__/Admin/add.html">添加管理员</a>
+                                <a class="J_menuItem" href="__MODULE__/Admin/add">添加管理员</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="addAdmins.html">修改个人信息</a>
+                                <a class="J_menuItem" href="__MODULE__/Admin/modi">修改个人信息</a>
                             </li>
                         </ul>
                     </li>
